@@ -26,6 +26,7 @@ the git history is not stored in them.
 * [[git]]
 * [[httpalso]]
 * [[borg]]
+* [[rclone]]
 
 The above special remotes are built into git-annex, and can be used
 to tie git-annex into many cloud services.
