@@ -900,6 +900,7 @@ Executable git-annex
     Remote.List
     Remote.List.Util
     Remote.P2P
+    Remote.Rclone
     Remote.Rsync
     Remote.Rsync.RsyncUrl
     Remote.S3
